frostwire (5.2.9) stable; urgency=high
  * Bug Fix: Finished Downloads shows only finished downloads.
  * Enhancement: Audio player will start playing currently selected audio
    source if it's on a stopped state.
  
 -- FrostWire Team <contact@frostwire.com>  Wed, 9 Nov 2011 12:11:10 -0500

frostwire (5.2.8) stable; urgency=high
  * Smart search updates uses less DHT resources and fixes logic bugs
    that results into faster and better search results.
  * New Internet Radio functionality on the Library. Play, Add, Remove
    and bookmark your favorite Internet Radio Stations.
  * Book/Document search now crawls for .cbr, .cbz, .cb7, .cbt and .cba
    file formats.
  * New "Show in Library" action for finished transfers. It is now the
    default action when a finished transfer has been double clicked.
  * Clicking on the currently played audio control should always take
    the user to the currently played audio file.
  * Top Library tree nodes re-arranged.
  * When downloading a single partial file, the transfer manager shows
    the proper icon based on the file type of the file being downloaded.
  * Add partial downloads, and multiple transfers that contain audio files
    to playlists right from the transfer manager.
  * The library can now be configured to scan any folder the user desires.
  * Files can be added to playlists right out of search results.
  * New explore action button on the Library tab.
  * New send to friend action button on the Library tab.
  * Faster loading of Finished Downloads.
  * Library search behaves as expected for all kinds of searches.
  * A lot of bug fixes.

 -- FrostWire Team <contact@frostwire.com>  Mon, 7 Nov 2011 17:02:29 -0500

frostwire (5.2.3) stable; urgency=high
  * Change the order of an audio file on playlist with drag and drop.
  * Change the order of multiple audio files on a playlist with drag and drop.
  * Drop audio files and folders at a specific position inside a playlist.