@@ -52,7 +52,8 @@ public class SavedFilesDirectoryHolder extends FileSettingDirectoryHolder {
 		
 		for (File f : listFiles) {
 			if (!f.isDirectory() && 
-				!_hideFiles.contains(f)) {
+				!_hideFiles.contains(f) &&
+				!f.getName().toLowerCase().contains(".ds_store")) {
 				results.add(f);
 			} else if (f.isDirectory() && !excludeFolders.contains(f)) {
 				results.addAll(getFilesRecursively(f, excludeFolders));
