@@ -1,7 +1,11 @@
 frostwire (5.2.9) stable; urgency=high
-  * Bug Fix: Finished Downloads shows only finished downloads.
+  * Enhancement: Lucene full text indexing for Smart Search database to
+    allow for fuzzy searches.
+  * Enhancement: Lucene full text indexing for Library database allows
+    better search results on Radio search and playlist search.
   * Enhancement: Audio player will start playing currently selected audio
     source if it's on a stopped state.
+  * Bug Fix: Finished Downloads shows only finished downloads.
   
  -- FrostWire Team <contact@frostwire.com>  Wed, 9 Nov 2011 12:11:10 -0500
 
